Fixed an overflow-related issue caused by dragging a task to the final list of a row

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-  overflow-x: hidden;
+  overflow: hidden;
   min-height: 100vh;
   background-image: linear-gradient(to bottom right, rgb(50, 55, 114) 35%, rgb(187, 87, 156));
 }
